refactor: MAJOR refactoring, removed thousands of lines of dead code