@@ -4,16 +4,10 @@ import java.io.Serializable;
 
 import edu.usc.softarch.arcade.classgraphs.StringEdge;
 
-
 /**
  * @author joshua
- *
  */
 public class Feature implements Serializable {
-
-	/**
-	 * 
-	 */
 	private static final long serialVersionUID = -2658336048930856739L;
 	public StringEdge edge;
 	public double value;
@@ -23,12 +17,9 @@ public class Feature implements Serializable {
 		this.value = value;
 	}
 	
-	public Feature() {
-		// TODO Auto-generated constructor stub
-	}
+	public Feature() { super(); }
 
 	public String toString() {
-		
 		if (this.value == 1) 
 			return edge + ":true";
 		else 
@@ -36,20 +27,17 @@ public class Feature implements Serializable {
 	}
 	
 	public boolean equals(Object o) {
-		Feature f = (Feature)o;
-		if (this.edge.equals(f.edge) && this.value == f.value) {
-			return true;
-		}
-		else
+		if(!(o instanceof Feature))
 			return false;
+
+		Feature f = (Feature)o;
+		return this.edge.equals(f.edge) && this.value == f.value;
 	}
 	
 	public int hashCode() {
 		int hash = 7;
-		hash = 37 * hash + (this.edge == null ? 0 : this.edge.hashCode() ) ;
-		hash = 37 * hash + (new Double(this.value)).hashCode();
+		hash = 37 * hash + (this.edge == null ? 0 : this.edge.hashCode());
+		hash = 37 * hash + (Double.valueOf(this.value)).hashCode();
 		return hash;
 	}
-	
-
 }
