@@ -3,25 +3,19 @@ package edu.usc.softarch.arcade.clustering;
 import java.io.Serializable;
 import java.util.Comparator;
 
+import edu.usc.softarch.arcade.Constants;
 import edu.usc.softarch.arcade.util.ExtractionContext;
-
 
 /**
  * @author joshua
- *
  */
 class JaccardComparator extends SimMeasureComparator implements Comparator<Cluster>,
 		Serializable {
 
-	boolean DEBUG = false;
-
-	/**
-* 
-*/
 	private static final long serialVersionUID = -5406183535441641044L;
 
 	public int compare(Cluster c1, Cluster c2) {
-		if (DEBUG) {
+		if (Constants._DEBUG) {
 			System.out.println("\tIn "
 					+ ExtractionContext.getCurrentClassAndMethodName());
 			System.out.println("\tc1: " + c1);
@@ -37,12 +31,12 @@ class JaccardComparator extends SimMeasureComparator implements Comparator<Clust
 					+ refCluster.toBinaryForm());
 		}
 
-		Double jaccardSimC2 = new Double(SimCalcUtil.getJaccardSim(c2,
+		Double jaccardSimC2 = Double.valueOf(SimCalcUtil.getJaccardSim(c2,
 				refCluster));
 
 		int returnValue = jaccardSimC2.compareTo(SimCalcUtil.getJaccardSim(c1,
 				refCluster));
-		if (DEBUG)
+		if (Constants._DEBUG)
 			System.out.println("\tJaccardComparator's return value: " + returnValue);
 
 		return returnValue;
