@@ -1,6 +1,5 @@
 package edu.usc.softarch.arcade.decay;
 
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -9,13 +8,11 @@ import java.util.Map;
 import java.util.Set;
 
 import org.apache.commons.lang3.tuple.MutablePair;
-import org.apache.commons.lang3.tuple.Pair;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PropertyConfigurator;
 import org.jgrapht.graph.DefaultEdge;
 import org.jgrapht.graph.SimpleDirectedGraph;
 
-import edu.usc.softarch.arcade.antipattern.detection.Smell;
 import edu.usc.softarch.arcade.clustering.StringGraph;
 import edu.usc.softarch.arcade.clustering.util.ClusterUtil;
 import edu.usc.softarch.arcade.config.Config;
@@ -26,7 +23,7 @@ import edu.usc.softarch.arcade.util.FileUtil;
 import edu.usc.softarch.arcade.util.LogUtil;
 
 public class DecayMetricAnalyzer {
-	static Logger logger = Logger.getLogger(DecayMetricAnalyzer.class);
+	private static Logger logger = Logger.getLogger(DecayMetricAnalyzer.class);
 	public static Double rciVal;
 	public static double twoWayPairRatio;
 	public static double avgStability;
@@ -56,8 +53,6 @@ public class DecayMetricAnalyzer {
 			}
 		}
 		
-		Map<String,Set<String>> clusterSmellMap = new HashMap<String,Set<String>>();
-		
 		String readingDepsFile = "Reading in deps file: " + depsRsfFilename;
 		System.out.println(readingDepsFile);
 		logger.info(readingDepsFile);
@@ -68,7 +63,6 @@ public class DecayMetricAnalyzer {
 		SimpleDirectedGraph<String, DefaultEdge> directedGraph = ClusterUtil.buildConcernClustersDiGraph(
 				clusters, clusterGraph);
 		
-		Map<String, Double> decayMetrics = new LinkedHashMap<String,Double>();
 		rciVal = detectRci(directedGraph);
 		
 		logger.info("rci: " + rciVal);
@@ -90,14 +84,13 @@ public class DecayMetricAnalyzer {
 		Map<String,Set<String>> clusterMap = ClusterUtil.buildClusterMap(clusterFacts);
 		Map<String,Set<MutablePair<String,String>>> internalEdgeMap = ClusterUtil.buildInternalEdgesPerCluster(clusterMap, depFacts);
 		Map<String,Set<MutablePair<String,String>>> externalEdgeMap = ClusterUtil.buildExternalEdgesPerCluster(clusterMap, depFacts);
-		Map<String,Set<MutablePair<String,String>>> intoEdgeMap = ClusterUtil.buildEdgesIntoEachCluster(clusterMap, depFacts);
 		
 		Map<String,Double> clusterFactors = new LinkedHashMap<String,Double>();
 		for (ConcernCluster cluster : clusters) {
 			Set<MutablePair<String,String>> internalEdges = internalEdgeMap.get(cluster.getName());
 			Set<MutablePair<String,String>> externalEdges = externalEdgeMap.get(cluster.getName());
 			if (internalEdges.size() == 0) {
-				clusterFactors.put(cluster.getName(),new Double(0));
+				clusterFactors.put(cluster.getName(),Double.valueOf(0));
 			}
 			else {
 				double cf = (double)(2*internalEdges.size())/(2*internalEdges.size()+externalEdges.size()); 
@@ -118,16 +111,12 @@ public class DecayMetricAnalyzer {
 		System.out.println("Wrote decay metrics to: ");
 		LogUtil.printLogFiles();
 		logger.info("");
-		
-		//computeMq(clusters,depsRsf)2*internalEdges.size()
-		
-
 	}
 	
 	private static double detectStability(
 			SimpleDirectedGraph<String, DefaultEdge> directedGraph) {
 		Set<String> vertices = directedGraph.vertexSet();
-		Map<String,Double> stabilityMap = new LinkedHashMap<String,Double>();
+		Map<String,Double> stabilityMap = new LinkedHashMap<>();
 		double stabilitySum = 0;
 		for (String vertex : vertices) {
 			Set<DefaultEdge> incomingEdges = directedGraph.incomingEdgesOf(vertex);
@@ -143,9 +132,8 @@ public class DecayMetricAnalyzer {
 			stabilitySum += stability;
 		}
 		
-		double avgStability = stabilitySum/vertices.size();
-		return avgStability;
-
+		// avgStability
+		return stabilitySum/vertices.size();
 	}
 
 	static long combinations(int n, int k) {
@@ -161,14 +149,14 @@ public class DecayMetricAnalyzer {
 	
 	private static Set<Set<String>> detectTwoWayDeps(
 			SimpleDirectedGraph<String, DefaultEdge> directedGraph) {
-		Set<Set<String>> twoWayPairs = new LinkedHashSet<Set<String>>();
+		Set<Set<String>> twoWayPairs = new LinkedHashSet<>();
 		
 		Set<DefaultEdge> actualEdges = directedGraph.edgeSet();		
 		for (DefaultEdge edge : actualEdges) {
 			String sourceCluster = directedGraph.getEdgeSource(edge);
 			String targetCluster = directedGraph.getEdgeTarget(edge);
 			if (directedGraph.containsEdge(targetCluster, sourceCluster)) {
-				Set<String> twoWayPair = new HashSet<String>();
+				Set<String> twoWayPair = new HashSet<>();
 				twoWayPair.add(sourceCluster);
 				twoWayPair.add(targetCluster);
 				twoWayPairs.add(twoWayPair);
@@ -186,9 +174,7 @@ public class DecayMetricAnalyzer {
 		int potentialEdgeCount = vertices.size()*(vertices.size()-1);
 		logger.debug("# actual edges: " + actualEdges.size());
 		logger.debug("# potential edges: " + potentialEdgeCount);
-		double rciVal = (double)actualEdges.size()/(double)potentialEdgeCount;
-		
-		return rciVal;
+		// rciVal
+		return (double)actualEdges.size()/(double)potentialEdgeCount;
 	}
-
 }
